# yolodesktop

./: .gitignore  gen_icons.py  index.html  package-lock.json  package.json
docs/: dataset-formats.md
docs/superpowers/plans/: 2026-05-19-yolodesktop-mvp-plan.md  2026-05-19-yolodesktop-ux-improvements-plan.md
docs/superpowers/specs/: 2026-05-19-yolodesktop-mvp-design.md  2026-05-19-yolodesktop-ux-improvements-design.md
python/: check_gpu.py  convert_dataset.py  download_test_dataset.py  export_onnx.py  requirements.txt  scan_folders.py  scan_models.py  search_huggingface.py  search_kaggle.py  search_roboflow.py  train.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: dataset.rs  env.rs  export.rs  mod.rs  plugins.rs  training.rs  workspace.rs
src-tauri/src/db/: migrate.rs  mod.rs  queries.rs
src-tauri/src/parser/: model_config.rs
src-tauri/src/python/: manager.rs  mod.rs  venv.rs
src/components/: app-shell.tsx  download-queue.tsx  error-banner.tsx  error-boundary.tsx  log-streamer.tsx  model-selector.tsx  param-tooltip.tsx  progress-overlay.tsx  yaml-editor.tsx
src/hooks/: use-invoke.ts
src/i18n/: index.ts
src/lib/: format-converters.ts
src/routes/: dashboard.tsx  dataset-detail.tsx  dataset-list.tsx  env-manager.tsx  export-manager.tsx  model-viewer.tsx  plugin-manager.tsx  settings.tsx  training-monitor.tsx  training-setup.tsx
src/stores/: download-store.ts  training-store.ts  workspace-store.ts
(+21 files in other folders)
